--- a/flask/fundamentals/counter/templates/index.html
+++ b/flask/fundamentals/counter/templates/index.html
@@ -8,9 +8,11 @@
         <title>Counter</title>
     </head>
     <body>
-        <h1>Counter</h1>
-        <p>{{counter}}</p>
+        <h1>Counter: {{counter}}</h1>
+        <h1>Visited: {{visited}}</h1>
         <form method="post" action"/">
+            <input type="text" name="num" placeholder="Number of Visit to increase"/>
+            <input type="submit" value="Add" name="add"/>
             <input type="submit" value="Add + 2" name="add"/>
             <input type="submit" value="Reset" name="reset"/>
         </form>
