update to counter

--- a/flask/fundamentals/counter/templates/index.html
+++ b/flask/fundamentals/counter/templates/index.html
@@ -8,7 +8,7 @@
         <title>Counter</title>
     </head>
     <body>
-        <h1>Counter: {{counter}}</h1>
+        <h1>Counter: {{session["count"]}}</h1>
         <h1>Visited: {{visited}}</h1>
         <form method="post" action"/">
             <input type="text" name="num" placeholder="Number of Visit to increase"/>
