completed mysql workbench setup

--- a/flask/fundamentals/ninja_gold/templates/index.html
+++ b/flask/fundamentals/ninja_gold/templates/index.html
@@ -19,6 +19,11 @@
                             {{session['gold']}}
                     </div>
                 </div>
+                <div class="col-3 offset-md-4">
+                    <form action="/reset" method="post">
+                        <button class="btn btn-danger">Reset Gold</button>
+                    </form>
+                </div>
             </div>
             <div class="row mt-3 d-flex flex-wrap">
                 <div class="col-2 box">
