--- a/flask_mysql/crud/users_cr/templates/users.html
+++ b/flask_mysql/crud/users_cr/templates/users.html
@@ -25,8 +25,8 @@
                     <tbody>
                         {% for user in users %}
                             <tr>
-                                <th>{{user.first_name}}</th>
-                                <th>{{user.last_name}}</th>
+                                <th>{{user.id}}</th>
+                                <th>{{user.first_name}} {{user.last_name}}</th>
                                 <th>{{user.email}}</th>
                                 <th>{{user.created_at}}</th>
                             </tr>
