updated the display of created at

--- a/flask_mysql/crud/users_cr/templates/users.html
+++ b/flask_mysql/crud/users_cr/templates/users.html
@@ -28,7 +28,7 @@
                                 <th>{{user.id}}</th>
                                 <th>{{user.first_name}} {{user.last_name}}</th>
                                 <th>{{user.email}}</th>
-                                <th>{{user.created_at}}</th>
+                                <th>{{user.created_at.strftime('%B %d, %Y')}}</th>
                             </tr>
                         {% endfor %}
                     </tbody>
