--- a/flask_mysql/crud/dojos_and_ninjas/flask_app/templates/dojo_show.html
+++ b/flask_mysql/crud/dojos_and_ninjas/flask_app/templates/dojo_show.html
@@ -11,7 +11,7 @@
         <div class="container">
             <div class="one-col">
                 <!-- pass the ninja and dojo info -->
-                <h2>{{ninjas[0]['name']}} Ninja</h2>
+                <h2>{{dojo[0]['name']}} Ninja</h2>
                 <table>
                     <tr>
                         <th>First Name</th>
