add some comments to dojos and ninjas

--- a/flask_mysql/crud/dojos_and_ninjas/flask_app/templates/dojo_show.html
+++ b/flask_mysql/crud/dojos_and_ninjas/flask_app/templates/dojo_show.html
@@ -10,8 +10,9 @@
     <body>
         <div class="container">
             <div class="one-col">
-                <!-- pass the ninja and dojo info -->
+                <!-- dojo name -->
                 <h2>{{dojo[0]['name']}} Ninja</h2>
+                {% comment %} Table for the ninjas info {% endcomment %}
                 <table>
                     <tr>
                         <th>First Name</th>
