--- a/flask_mysql/crud/dojos_and_ninjas/flask_app/templates/dojos.html
+++ b/flask_mysql/crud/dojos_and_ninjas/flask_app/templates/dojos.html
@@ -9,6 +9,7 @@
     </head>
     <body>
         <div class="container">
+            <!-- Create a form -->
             <div class="left">
                 <h2>New Dojo</h2>
                 <form action="/process/create/dojos" method="post">
@@ -19,6 +20,8 @@
                     <button type="submit" class="btn">Create</button>
                 </form>
             </div>
+
+            <!-- Listing of all the dojos-->
             <div class="right">
                 <h2>All Dojos</h2>
                 <div class="dojo-listing">
