--- a/flask_mysql/crud/dojos_and_ninjas/flask_app/templates/new_ninja.html
+++ b/flask_mysql/crud/dojos_and_ninjas/flask_app/templates/new_ninja.html
@@ -11,6 +11,8 @@
         <div class="container">
             <div class="one-col">
                 <h2>New Ninja</h2>
+
+                <!-- Inputing the new ninja information -->
                 <form action="/process/ninja" method="POST">
                     <div>
                         <label for="dojo">Dojo:</label>
