completed the dojo_survey_valid

--- a/flask_mysql/validation/dojos_survey_with_validation/flask_app/templates/result.html
+++ b/flask_mysql/validation/dojos_survey_with_validation/flask_app/templates/result.html
@@ -27,7 +27,7 @@
                     Favorite Food to eat: {{session['food']}}
                 {% endif %}
             </p>
-            <a href="/">Home</a>
+            <a href="/reset">Home</a>
         </div>
     </body>
 </html>
