--- a/flask_mysql/validation/dojos_survey_with_validation/flask_app/templates/form.html
+++ b/flask_mysql/validation/dojos_survey_with_validation/flask_app/templates/form.html
@@ -11,6 +11,13 @@
     <body>
         <div class="container smaller">
             <h1>Dojo Survey</h1>
+            {% with messages = get_flashed_messages() %}
+                {% if messages %}
+                    {% for message in messages %}
+                        <p>{{message}}</p>
+                    {% endfor %}
+                {% endif%}
+            {% endwith %}
             <form action="/process" method="post">
                 <div class="mb-3">
                     <label for="name" class="form-label">Name:</label>
