completed login and registration

--- a/flask_mysql/crud/dojos_and_ninjas/flask_app/templates/dojo_show.html
+++ b/flask_mysql/crud/dojos_and_ninjas/flask_app/templates/dojo_show.html
@@ -4,15 +4,15 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="{{url_for('static', filename="style.css")}}">
+        <link rel="stylesheet" href="{{url_for('static', filename='style.css')}}">
         <title>Dojo Show</title>
     </head>
     <body>
         <div class="container">
             <div class="one-col">
                 <!-- dojo name -->
-                <h2>{{dojo[0]['name']}} Ninja</h2>
-                {% comment %} Table for the ninjas info {% endcomment %}
+                <h2>{{dojo.name}} Ninja</h2>
+                <!-- Table for the ninjas info -->
                 <table>
                     <tr>
                         <th>First Name</th>
@@ -20,11 +20,11 @@
                         <th>Age</th>
                     </tr>
                     <!-- pass the ninjas-->
-                    {% for ninja in ninjas  %}
+                    {% for ninja in dojo.ninjas  %}
                         <tr class="row">
-                            <td>{{ninja['first_name']}}</td>
-                            <td>{{ninja['last_name']}}</td>
-                            <td>{{ninja['age']}}</td>
+                            <td>{{ninja.first_name}}</td>
+                            <td>{{ninja.last_name}}</td>
+                            <td>{{ninja.age}}</td>
                         </tr>
                     {% endfor%}
                 </table>
