--- a/flask_mysql/crud/dojos_and_ninjas/flask_app/templates/dojos.html
+++ b/flask_mysql/crud/dojos_and_ninjas/flask_app/templates/dojos.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="{{url_for('static', filename="style.css")}}">
+        <link rel="stylesheet" href="{{url_for('static', filename='style.css')}}">
         <title>Dojos</title>
     </head>
     <body>
@@ -26,7 +26,7 @@
                 <h2>All Dojos</h2>
                 <div class="dojo-listing">
                     {% for dojo in dojos %}
-                        <a href="{{url_for('showDojo', id=dojo.id)}}">{{dojo.name}}</a>
+                        <a href="/dojo/{{dojo.id}}">{{dojo.name}}</a>
                     {% endfor %}
                 </div>
                 <a href="/ninjas">Add Ninja</a>
