change to dashboard

--- a/flask_mysql/validation/login_and_registration/flask_app/templates/dashboard.html
+++ b/flask_mysql/validation/login_and_registration/flask_app/templates/dashboard.html
@@ -10,7 +10,7 @@
     <body>
         <div class="container dashboard">
             <h1>Welcome {{user.first_name}}!!!!</h1>
-            <p>The remember checkbox will allow you to log in again without inputting email and password. Work only on the next time you log in.</p>
+            <p>The remember checkbox will allow you to log in again without inputting email and password. Work only when Logout is not click.</p>
             <a href="/logout"><button class="logout">Logout</button></a>
         </div>
     </body>
